# NetworkDiagramHarness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: concept.md  current-state.md  folder-structure.md  image-export-workflow.md  layout-workflow.md  profile-network-workflow.md  prompt-workflow.md  schema.md  specification.md
docs/examples/: multi-zone-network.md  office-and-cloud.md  profile-home-lab.md  simple-network.md  web-three-tier.md  zero-trust-access.md
examples/: multi-zone-network.yml  office-and-cloud.yml  profile-home-lab.yml  simple-network.yml  web-three-tier.yml  zero-trust-access.yml
prompts/: network-diagram-request.md
scripts/: export-profile-images.ps1  svg-to-png.mjs
src/network_diagram_harness/: __init__.py  cli.py  export.py  io.py  mermaid.py  model.py  preview.py  svg.py
src/network_diagram_harness/renderers/: __init__.py  base.py  drawsvg.py  graphviz.py  mermaid.py  pyvis.py  styles.py
tests/: test_cli.py  test_docs.py  test_examples.py  test_export.py  test_graphviz.py  test_mermaid.py  test_preview.py  test_renderers.py  test_svg.py
